2002-07-22  Mo DeJong  <mdejong@users.sourceforge.net>

	* README: Fix typo.
	* doc/man/thread.n: Note that thread::join and
	thread::transfer are only available with Tcl 8.4.

2002-07-20  Mo DeJong  <mdejong@users.sourceforge.net>

        * generic/threadSvCmd.c (Sv_tclEmptyStringRep, Sv_Init):
        Avoid linking to the tclEmptyStringRep variable defined
        in Tcl since this makes it very difficult to load
        the Thread package into an executable that has
        also loaded Tcl. The previous approach used a hack
        under Windows, we now use this same hack on all systems.
	[Tcl patch 584123]

2002-07-19  Zoran Vasiljevic <zoran@archiware.com>  

	* threadCmd.c: added some macros to simplify
	adding and removing result structure in and  
	out of the corresponding lists

2002-07-18  Zoran Vasiljevic <zoran@archiware.com>  

	* threadCmd.c: modified thread::release to allow
	for optional "-wait" argument. This will result in 
	the thread waiting until the target thread has really
	exited. Otherwise, the command exits immediately and 
	target thread may exit asynchronously some time later.
 	This is not techically needed since one can always join
	the exiting thread, but the join command is not 
	available for some older Tcl versions. 

2002-07-13  Zoran Vasiljevic <zoran@archiware.com>  

	* doc/man:
	* doc/html: added two directories with TMML generated files
	* doc/thread.tmml: fixed for the final 2.4 release
	* Makefile.in: updated install-doc target to look for man files
	under doc/man instead only under doc directory

2002-07-12  Zoran Vasiljevic <zoran@archiware.com>  

	* generic/threadSvCmd.s: fixed handling of string rep
	in shared var object duplicator

2002-07-09  Zoran Vasiljevic <zoran@archiware.com>  
	* README: added this file
 	* license.terms: added this file

2002-07-05  Zoran Vasiljevic <zoran@archiware.com>  

        * tclconfig/tcl.m4: fixed reference to MINGW so we can
	compile w/o MSVC under windows. 
